--- a/index.html
+++ b/index.html
@@ -13,61 +13,69 @@
     <title>Frontend Mentor | Social proof section</title>
   </head>
   <body>
-    <div class="descandstars">
-      <div class="description">
-        <h1>10,000+ of our users love our products.</h1>
-        <p>We only provide great products combined with excellent customer service.
-          See what our satisfied customers are saying about our services.</p>
-      </div>
-      <div class="stars">
-        <div>
-          <img src="images/icon-star.svg">
-          <img src="images/icon-star.svg">
-          <img src="images/icon-star.svg">
-          <img src="images/icon-star.svg">
-          <img src="images/icon-star.svg">
-          <h4>Rated 5 Stars in Reviews</h4>
+    <div class="container">
+      <div class="descandstars">
+        <div class="description">
+          <h1>10,000+ of our users love our products.</h1>
+          <p>We only provide great products combined with excellent customer service.
+            See what our satisfied customers are saying about our services.</p>
         </div>
-        <div>
-          <img src="images/icon-star.svg">
-          <img src="images/icon-star.svg">
-          <img src="images/icon-star.svg">
-          <img src="images/icon-star.svg">
-          <img src="images/icon-star.svg">
-          <h4>Rated 5 Stars in Report Guru</h4>          
+        <div class="stars">
+          <div class="starcontainer" id="stair1">
+            <div class="somestars">
+              <img src="images/icon-star.svg" class="star">
+              <img src="images/icon-star.svg" class="star">
+              <img src="images/icon-star.svg" class="star">
+              <img src="images/icon-star.svg" class="star">
+              <img src="images/icon-star.svg" class="star">
+            </div>
+            <h4>Rated 5 Stars in Reviews</h4>
+          </div>
+          <div class="starcontainer">
+            <div class="somestars">
+              <img src="images/icon-star.svg" class="star">
+              <img src="images/icon-star.svg" class="star">
+              <img src="images/icon-star.svg" class="star">
+              <img src="images/icon-star.svg" class="star">
+              <img src="images/icon-star.svg" class="star">
+            </div>
+            <h4>Rated 5 Stars in Report Guru</h4>          
+          </div>
+          <div class="starcontainer" id="stair3">
+            <div class="somestars">
+              <img src="images/icon-star.svg" class="star">
+              <img src="images/icon-star.svg" class="star">
+              <img src="images/icon-star.svg" class="star">
+              <img src="images/icon-star.svg" class="star">
+              <img src="images/icon-star.svg" class="star">
+            </div>
+            <h4>Rated 5 Stars in BestTech</h4>          
+          </div>
         </div>
-        <div>
-          <img src="images/icon-star.svg">
-          <img src="images/icon-star.svg">
-          <img src="images/icon-star.svg">
-          <img src="images/icon-star.svg">
-          <img src="images/icon-star.svg">
-          <h4>Rated 5 Stars in BestTech</h4>          
+      </div>
+      <div class="profiles">
+        <div class="profile">
+          <img src="images/image-colton.jpg" class="profileimg">
+          <h3>Colton Smith</h3>
+          <p>Verified Buyer</p>
+          <p>"We needed the same printed design as the one we had ordered a week prior.
+            Not only did they find the original order, but we also received it in time.
+            Excellent!"</p>
         </div>
-      </div>
-    </div>
-    <div class="profiles">
-      <div class="profile">
-        <img src="images/image-colton.jpg" class="profileimg">
-        <h3>Colton Smith</h3>
-        <p>Verified Buyer</p>
-        <p>"We needed the same printed design as the one we had ordered a week prior.
-          Not only did they find the original order, but we also received it in time.
-          Excellent!"</p>
-      </div>
-      <div class="profile">
-        <img src="images/image-irene.jpg" class="profileimg">
-        <h3>Irene Roberts</h3>
-        <p>Verified Buyer</p>
-        <p>"Customer service is always excellent and very quick turn around. Completely
-          delighted with the simplicity of the purchase and the speed of delivery."</p>
-      </div>
-      <div class="profile">
-        <img src="images/image-anne.jpg" class="profileimg">
-        <h3>Anne Wallace</h3>
-        <p>Verified Buyer</p>
-        <p>"Put an order with this company and can only praise them for the very high
-          standard. Will definitely use them again and recommend them to everyone!"</p>
+        <div class="profile">
+          <img src="images/image-irene.jpg" class="profileimg">
+          <h3>Irene Roberts</h3>
+          <p>Verified Buyer</p>
+          <p>"Customer service is always excellent and very quick turn around. Completely
+            delighted with the simplicity of the purchase and the speed of delivery."</p>
+        </div>
+        <div class="profile">
+          <img src="images/image-anne.jpg" class="profileimg">
+          <h3>Anne Wallace</h3>
+          <p>Verified Buyer</p>
+          <p>"Put an order with this company and can only praise them for the very high
+            standard. Will definitely use them again and recommend them to everyone!"</p>
+        </div>
       </div>
     </div>
   </body>
