Finished desktop version

--- a/index.html
+++ b/index.html
@@ -54,26 +54,38 @@
         </div>
       </div>
       <div class="profiles">
-        <div class="profile">
-          <img src="images/image-colton.jpg" class="profileimg">
-          <h3>Colton Smith</h3>
-          <p>Verified Buyer</p>
-          <p>"We needed the same printed design as the one we had ordered a week prior.
+        <div class="profile" id="profile1">
+          <div class="profiletitle">
+            <img src="images/image-colton.jpg" class="profileimg">
+            <div class="pictitle">
+              <h3>Colton Smith</h3>
+              <p>Verified Buyer</p>              
+            </div>
+          </div>
+          <p class="text">"We needed the same printed design as the one we had ordered a week prior.
             Not only did they find the original order, but we also received it in time.
             Excellent!"</p>
         </div>
-        <div class="profile">
-          <img src="images/image-irene.jpg" class="profileimg">
-          <h3>Irene Roberts</h3>
-          <p>Verified Buyer</p>
-          <p>"Customer service is always excellent and very quick turn around. Completely
+        <div class="profile" id="profile2">
+          <div class="profiletitle">
+            <img src="images/image-irene.jpg" class="profileimg">
+            <div class="pictitle">
+              <h3>Irene Roberts</h3>
+              <p>Verified Buyer</p>
+            </div>
+          </div>
+          <p class="text">"Customer service is always excellent and very quick turn around. Completely
             delighted with the simplicity of the purchase and the speed of delivery."</p>
         </div>
-        <div class="profile">
-          <img src="images/image-anne.jpg" class="profileimg">
-          <h3>Anne Wallace</h3>
-          <p>Verified Buyer</p>
-          <p>"Put an order with this company and can only praise them for the very high
+        <div class="profile" id="profile3">
+          <div class="profiletitle">
+            <img src="images/image-anne.jpg" class="profileimg">
+            <div class="pictitle">
+              <h3>Anne Wallace</h3>
+              <p>Verified Buyer</p>
+            </div>
+          </div>
+          <p class="text">"Put an order with this company and can only praise them for the very high
             standard. Will definitely use them again and recommend them to everyone!"</p>
         </div>
       </div>
